[package]
name = "astresp32"
version = "0.1.0"
authors = ["JakeSaphhire <yannick.mudinda@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.12.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = [ "esp32" ] }
esp-hal-embassy = { version = "0.1.0", features = [
    "time-timg0",            # Compatible with all chips
    "esp32"
] }


embassy-executor    = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-futures     = "0.1.1"
embassy-net         = { version = "0.4.0", features = [ "tcp", "proto-ipv4", "medium-ethernet"] }
embassy-sync        = "0.5.0"
embassy-time        = { version = "0.3.0", features = ["generic-queue-8"]}
embassy-time-driver = { version = "0.1.0" }

esp-println = { version = "0.9.1", features = ["esp32", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.6.0", features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi",
    "tcp",
    "async",
    "embassy-net"
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

static_cell = { version = "2.1.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
